--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,38 @@
 .header  {
   font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 600;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
   font-size: 48px;
-  font-weight: 900;
+  font-weight: 1000;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  border: 8px papayawhip solid;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 8px;
+  color: blue;
   /* this removes the line under the links */
   text-decoration: none;
 }
