--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,22 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+  flex-wrap: wrap;
+}
+
+.item {
+  width: 200px;
+  text-align: center;
+}
